--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -9,8 +9,13 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="styles.css">
+<link rel="manifest" href="manifest.json" />
+<link rel="apple-touch-icon" href="images/icons/icon-192x192.png" />
+<link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
+<meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+<meta name="theme-color" content="#db4938" />
 
-  <title>Budget Tracker</title>
+  <title>Rad Budget Tracker</title>
 </head>
 <body>
   <div class="wrapper">
