--- a/Develop/public/index.html
+++ b/Develop/public/index.html
@@ -47,6 +47,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-  <script src="index.js"></script>
+  <script src="../public/index.js"></script>
 </body>
 </html>
